# timeago

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs  main.rs
src/languages/: basque.rs  belarusian.rs  chinese.rs  danish.rs  english.rs  french.rs  german.rs  italian.rs  japanese.rs  korean.rs  mod.rs  polish.rs  portuguese.rs  romanian.rs  russian.rs  spanish.rs  swedish.rs  thai.rs  turkish.rs  ukrainian.rs
