[package]
name = "timeago"
version = "0.0.1"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Given a Duration, lossily format it like in 'N days ago'. Parsing it back to Duration is not supported yet. English only, at least for now."
repository = "https://github.com/vi/timeago"
documentation = "https://docs.rs/timeago/"

[dependencies]
