[package]
name = "timeago"
version = "0.4.2"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Given a Duration, lossily format it like in 'N days ago'. Parsing it back to Duration is not supported yet."
repository = "https://github.com/vi/timeago"
documentation = "https://docs.rs/timeago/"
readme = "README.md"

[dependencies]
isolang={version="2", optional=true}
chrono={version="0.4", optional=true}

[features]
default = ["translations", "isolang", "chrono"]
translations=[]

[package.metadata.docs.rs]
features = [ "translations", "isolang", "chrono" ]
